[project]
name = "aiasan"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [{ name = "Magsen Chebini", email = "magsen.che@gmail.com" }]
dependencies = [
    "black>=24.3.0",
    "pyautogen>=0.2.20",
    "colorlog>=6.8.2",
    "apify-client>=1.6.4",
    "bs4>=0.0.2",
    "playwright>=1.42.0",
    "beautifulsoup4>=4.12.3",
    "crewai>=0.28.8",
    "unstructured[md]>=0.11.8",
    "faiss-cpu>=1.8.0",
    "langchain>=0.1.16",
    "langchain-openai>=0.0.5",
    "crewai-tools>=0.1.7",
    "aiasan @ file:///${PROJECT_ROOT}/",
    "streamlit>=1.33.0",
    "pypdf>=3.17.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.version]
source = "call"
getter = "src.aiasan:get_version"

[tool.pdm.scripts]
_.env_file = ".env"
askzono = "python -m streamlit run cookbook/askzono.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
